--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
   "author": "Emmanuel Henri",
   "license": "ISC",
   "dependencies": {
-    "body-parser": "^1.20.2",
     "express": "^4.18.2",
+    "graphql": "^16.9.0",
+    "graphql-http": "^1.22.3",
     "mongoose": "^8.0.4",
     "nodemon": "^3.0.2"
   },
