--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "express": "^4.18.2",
     "graphql": "^16.9.0",
     "graphql-http": "^1.22.3",
+    "graphql-playground-middleware-express": "^1.7.23",
     "mongoose": "^8.0.4",
     "nodemon": "^3.0.2"
   },
