--- a/package.json
+++ b/package.json
@@ -1,25 +1,22 @@
 {
-  "name": "crm",
+  "name": "graphql-workshop",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "type": "module",
   "scripts": {
-    "start": "nodemon ./index.js --exec babel-node"
+    "dev": "tsx watch src/index.ts",
+    "start": "tsx src/index.ts"
   },
-  "author": "Emmanuel Henri",
+  "keywords": [],
+  "author": "",
   "license": "ISC",
+  "description": "",
   "dependencies": {
-    "express": "^4.18.2",
-    "graphql": "^16.9.0",
-    "graphql-http": "^1.22.3",
-    "graphql-playground-middleware-express": "^1.7.23",
-    "mongoose": "^8.0.4",
-    "nodemon": "^3.0.2"
+    "@apollo/server": "^4.11.2",
+    "graphql": "^16.10.0"
   },
   "devDependencies": {
-    "@babel/cli": "^7.19.3",
-    "@babel/core": "^7.19.3",
-    "@babel/node": "^7.19.1",
-    "@babel/preset-env": "^7.19.3"
+    "@types/node": "^22.10.2",
+    "tsx": "^4.19.2",
+    "typescript": "^5.7.2"
   }
 }
