--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "description": "",
   "dependencies": {
     "@apollo/server": "^4.11.2",
-    "graphql": "^16.10.0"
+    "graphql": "^16.10.0",
+    "graphql-tag": "^2.12.6"
   },
   "devDependencies": {
     "@types/node": "^22.10.2",
